{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 67,
  "lineage": "5c97cec9-cc51-cce8-95a7-bc7e282cf864",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-0f06f00af64011a9e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f06f00af64011a9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e3b1154563a4d407"
              }
            ],
            "primary_network_interface_id": "eni-0e3b1154563a4d407",
            "private_dns": "ip-172-31-23-240.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.240",
            "public_dns": "ec2-3-90-232-7.compute-1.amazonaws.com",
            "public_ip": "3.90.232.7",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0831b2417f6ecb8da",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "mongo"
            },
            "tags_all": {
              "Name": "mongo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02643b884dd5cffc5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-0f06f00af64011a9e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-0d828cf2a31ea8451",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d828cf2a31ea8451",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dddd8c4d23077173"
              }
            ],
            "primary_network_interface_id": "eni-0dddd8c4d23077173",
            "private_dns": "ip-172-31-21-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.21.159",
            "public_dns": "ec2-98-81-217-4.compute-1.amazonaws.com",
            "public_ip": "98.81.217.4",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-006d7723addea2a94",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "mysql"
            },
            "tags_all": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02643b884dd5cffc5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-0d828cf2a31ea8451",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-0b458023e54c96ea9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b458023e54c96ea9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04e1e51f8e85f55a2"
              }
            ],
            "primary_network_interface_id": "eni-04e1e51f8e85f55a2",
            "private_dns": "ip-172-31-24-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.137",
            "public_dns": "ec2-54-242-250-51.compute-1.amazonaws.com",
            "public_ip": "54.242.250.51",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b174cbac16d71316",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "redis"
            },
            "tags_all": {
              "Name": "redis"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02643b884dd5cffc5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-0b458023e54c96ea9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-05060e40bf97f3aaf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05060e40bf97f3aaf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ef50a7115ecfae8c"
              }
            ],
            "primary_network_interface_id": "eni-0ef50a7115ecfae8c",
            "private_dns": "ip-172-31-16-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.16.148",
            "public_dns": "ec2-18-206-175-38.compute-1.amazonaws.com",
            "public_ip": "18.206.175.38",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-058035b6c7e8a92eb",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "rabbitmq"
            },
            "tags_all": {
              "Name": "rabbitmq"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02643b884dd5cffc5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-05060e40bf97f3aaf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-077a572389601fbd0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077a572389601fbd0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0994cc5c1ba62bad1"
              }
            ],
            "primary_network_interface_id": "eni-0994cc5c1ba62bad1",
            "private_dns": "ip-172-31-26-132.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.132",
            "public_dns": "ec2-54-196-232-155.compute-1.amazonaws.com",
            "public_ip": "54.196.232.155",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-082f84106f7fd2e3d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "catalogue"
            },
            "tags_all": {
              "Name": "catalogue"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02643b884dd5cffc5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-077a572389601fbd0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-04492fa4f6005b75f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04492fa4f6005b75f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0217024c17386f098"
              }
            ],
            "primary_network_interface_id": "eni-0217024c17386f098",
            "private_dns": "ip-172-31-19-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.19.156",
            "public_dns": "ec2-54-91-158-24.compute-1.amazonaws.com",
            "public_ip": "54.91.158.24",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04f4a87d0a2924be5",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "user"
            },
            "tags_all": {
              "Name": "user"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02643b884dd5cffc5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-04492fa4f6005b75f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-08173aa27a551a824",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08173aa27a551a824",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a0bdea354dc0b52a"
              }
            ],
            "primary_network_interface_id": "eni-0a0bdea354dc0b52a",
            "private_dns": "ip-172-31-17-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.172",
            "public_dns": "ec2-52-5-79-28.compute-1.amazonaws.com",
            "public_ip": "52.5.79.28",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b3d4b6a515ba0793",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "cart"
            },
            "tags_all": {
              "Name": "cart"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02643b884dd5cffc5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-08173aa27a551a824",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-0f7e96296eb0566e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7e96296eb0566e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0daa7df0581042fef"
              }
            ],
            "primary_network_interface_id": "eni-0daa7df0581042fef",
            "private_dns": "ip-172-31-27-210.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.210",
            "public_dns": "ec2-98-89-30-170.compute-1.amazonaws.com",
            "public_ip": "98.89.30.170",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f64639d9ea0a972a",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "shipping"
            },
            "tags_all": {
              "Name": "shipping"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02643b884dd5cffc5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-0f7e96296eb0566e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-0ec859eea72e7dc8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec859eea72e7dc8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06df794fb75b9f694"
              }
            ],
            "primary_network_interface_id": "eni-06df794fb75b9f694",
            "private_dns": "ip-172-31-27-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.170",
            "public_dns": "ec2-54-87-51-75.compute-1.amazonaws.com",
            "public_ip": "54.87.51.75",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-084a211a4831b776c",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "payment"
            },
            "tags_all": {
              "Name": "payment"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02643b884dd5cffc5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-0ec859eea72e7dc8d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-08430c76a4fc76094",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08430c76a4fc76094",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ecffdc5017ba446a"
              }
            ],
            "primary_network_interface_id": "eni-0ecffdc5017ba446a",
            "private_dns": "ip-172-31-24-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.83",
            "public_dns": "ec2-13-222-5-200.compute-1.amazonaws.com",
            "public_ip": "13.222.5.200",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ad77a161e47cfcb5",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02643b884dd5cffc5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-08430c76a4fc76094",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548775194773:security-group/sg-02643b884dd5cffc5",
            "description": "Allow all inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02643b884dd5cffc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_terraform",
            "name_prefix": "",
            "owner_id": "548775194773",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_terraform"
            },
            "tags_all": {
              "Name": "allow_all_terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4c9eb52dea4ac5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "sg-02643b884dd5cffc5",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548775194773:security-group-rule/sgr-0a7bc8ffafa6bad0c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a7bc8ffafa6bad0c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-02643b884dd5cffc5",
            "security_group_rule_id": "sgr-0a7bc8ffafa6bad0c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "sgr-0a7bc8ffafa6bad0c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548775194773:security-group-rule/sgr-0b8d6d206a2f2a9a1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b8d6d206a2f2a9a1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-02643b884dd5cffc5",
            "security_group_rule_id": "sgr-0b8d6d206a2f2a9a1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "sgr-0b8d6d206a2f2a9a1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        }
      ]
    }
  ]
}